quick-start/kubernetes/dp-python-worker-development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataplane-worker-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dataplane-worker-dev
  template:
    metadata:
      labels:
        app: dataplane-worker-dev
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
      volumes:
        - name: dp-code-cache-volume
          emptyDir:
            medium: Memory
            sizeLimit: 250Mi
      containers:
        - name: container
          image: dataplane/dataplane-worker-python:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/dataplane/dfs-code-files"
              name: dp-code-cache-volume
              subPath: dfs-code-files
          command:
            - "./dataplane-worker"
          ports:
            - containerPort: 9005
