quick-start/kubernetes/dp-main-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: dataplane-main
  namespace: default
  labels:
    app: dataplane-main
spec:
  ports:
    - name: tcp
      protocol: TCP
      #      port = port connected to ingress
      port: 9000
      # targetPort = port on container
      targetPort: 9000
  selector:
    app: dataplane-main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataplane-main
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dataplane-main
  template:
    metadata:
      labels:
        app: dataplane-main
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
      containers:
        - name: container
          image: dataplane/dataplane:latest
          command:
            - "./dataplane"
          ports:
            - containerPort: 9000
          resources:
            limits:
              memory: "200Mi"
              cpu: "0.2"
            requests:
              memory: "100Mi"
              cpu: "0.1"
