quick-start/kubernetes/dp-worker-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: dataplane-worker
  namespace: default
  labels:
    app: dataplane-worker
spec:
  ports:
    - name: tcp
      protocol: TCP
      #      port = port connected to ingress
      port: 9005
      # targetPort = port on container
      targetPort: 9005
  selector:
    app: dataplane-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataplane-worker
spec:
  replicas: 4
  selector:
    matchLabels:
      app: dataplane-worker
  template:
    metadata:
      labels:
        app: dataplane-worker
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
      containers:
        - name: container
          image: dataplane/dataplane-worker:latest
          command:
            - "./dataplane-worker"
          ports:
            - containerPort: 9005
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.4"
            requests:
              memory: "100Mi"
              cpu: "0.1"
