quick-start/kubernetes/dataplane-k8s-combined.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dataplane-main
  name: dataplane-main
  namespace: default
spec:
  ports:
  - name: tcp
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: dataplane-main
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dataplane-worker
  name: dataplane-worker
  namespace: default
spec:
  ports:
  - name: tcp
    port: 9005
    protocol: TCP
    targetPort: 9005
  selector:
    app: dataplane-worker
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: timescaledb
  name: timescaledb-service
  namespace: default
spec:
  ports:
  - name: http
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: timescaledb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nats
  name: nats
spec:
  ports:
  - name: client
    port: 4222
  - name: cluster
    port: 6222
  - name: monitor
    port: 8222
  - name: metrics
    port: 7777
  - name: leafnodes
    port: 7422
  - name: gateways
    port: 7522
  selector:
    app: nats
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataplane-main
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dataplane-main
  template:
    metadata:
      labels:
        app: dataplane-main
    spec:
      containers:
      - command:
        - ./dataplane
        image: dataplane/dataplane:latest
        name: container
        ports:
        - containerPort: 9000
        resources:
          limits:
            cpu: "0.2"
            memory: 200Mi
          requests:
            cpu: "0.1"
            memory: 100Mi
        volumeMounts:
        - mountPath: /appdev/code-files
          name: dp-persistent-storage
          subPath: code-files
      securityContext:
        runAsGroup: 10001
        runAsUser: 10001
      volumes:
      - name: dp-persistent-storage
        persistentVolumeClaim:
          claimName: dataplane-storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataplane-worker
spec:
  replicas: 4
  selector:
    matchLabels:
      app: dataplane-worker
  template:
    metadata:
      labels:
        app: dataplane-worker
    spec:
      containers:
      - command:
        - ./dataplane-worker
        image: dataplane/dataplane-worker-python:latest
        name: container
        ports:
        - containerPort: 9005
        resources:
          limits:
            cpu: "0.4"
            memory: 500Mi
          requests:
            cpu: "0.1"
            memory: 100Mi
        volumeMounts:
        - mountPath: /appdev/code-files
          name: dp-persistent-storage
          subPath: code-files
      securityContext:
        runAsGroup: 10001
        runAsUser: 10001
      volumes:
      - name: dp-persistent-storage
        persistentVolumeClaim:
          claimName: dataplane-storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: timescaledb
  name: timescaledb
spec:
  selector:
    matchLabels:
      app: timescaledb
  template:
    metadata:
      labels:
        app: timescaledb
    spec:
      containers:
      - env:
        - name: POSTGRES_USER
          value: postgres
        - name: POSTGRES_PASSWORD
          value: Hello123!
        - name: POSTGRES_DB
          value: dataplane
        - name: PGDATA
          value: /var/lib/postgresql/data/tdbdata
        image: timescale/timescaledb:2.5.1-pg14
        name: container
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: timescaledb-persistent-storage
          subPath: data
      securityContext:
        fsGroup: 70
        runAsGroup: 70
        runAsUser: 70
      volumes:
      - name: timescaledb-persistent-storage
        persistentVolumeClaim:
          claimName: timescaledb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nats
  name: nats
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nats
  serviceName: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - command:
        - nats-server
        - --config
        - /etc/nats-config/nats.conf
        image: nats:2.7.4-alpine
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - /nats-server -sl=ldm=/var/run/nats/nats.pid && /bin/sleep 60
        name: nats
        ports:
        - containerPort: 4222
          name: client
        - containerPort: 7422
          name: leafnodes
        - containerPort: 6222
          name: cluster
        - containerPort: 8222
          name: monitor
        - containerPort: 7777
          name: metrics
        volumeMounts:
        - mountPath: /etc/nats-config
          name: config-volume
        - mountPath: /var/run/nats
          name: pid
      shareProcessNamespace: true
      terminationGracePeriodSeconds: 60
      volumes:
      - configMap:
          name: nats-config
        name: config-volume
      - emptyDir: {}
        name: pid
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  name: dp-ingress
spec:
  rules:
  - host: dataplane.info
    http:
      paths:
      - backend:
          service:
            name: dataplane-main
            port:
              number: 9000
        path: /
        pathType: Prefix
