quick-start/kubernetes/dp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dp-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - host: dataplane.info
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dataplane-main
              port:
                number: 9000
